fixes to make it work as a mac app